[package]
name = "rusctp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sync", "async"]
sync = []
async = []
fuzz = []

[dependencies]
crc = {version="3.1.0-beta", features=["slice16-mem-limit"]}
bytes = "1"
rand = "0.8"

[dev-dependencies]
tokio = {version = "*", features= ["rt", "rt-multi-thread", "net", "time", "macros", "sync"] }
